Updating teams item

--- a/website/site/content/download/_index.html
+++ b/website/site/content/download/_index.html
@@ -6,6 +6,17 @@ weight: 1
 <div class="homepage__section homepage__threecol">
     <div class="threecol__single">
         <div class="threecol__image">
+            <img src="../img/teams-icon.svg" alt="Teams Icon">
+        </div>
+        <div class="threecol__copy">
+            <h4>For Teams</h4>
+            <p>
+                Get started with Boards for free with <a href="https://customers.mattermost.com/cloud/signup?utm_source=focalboard&utm_campaign=focalboard" target='_blank'>Mattermost Cloud</a> or <a href="https://mattermost.com/deploy/?utm_source=focalboard&utm_campaign=focalboard" target='_blank'>install Mattermost as a self-hosted server</a>.
+            </p>
+        </div>
+    </div>
+    <div class="threecol__single">
+        <div class="threecol__image">
             <img src="../img/developers-icon.svg" alt="Developers Icon">
         </div>
         <div class="threecol__copy">
@@ -24,17 +35,6 @@ weight: 1
             <h4>For Single Users</h4>
             <p>
                 Get <a href="https://www.focalboard.com/download/personal-edition/desktop/">Personal Desktop</a>, a stand-alone single-user app for <a href="https://www.focalboard.com/download/personal-edition/desktop/#macos">Mac</a>, <a href="https://www.focalboard.com/download/personal-edition/desktop/#windows">Windows</a>, and <a href="https://www.focalboard.com/download/personal-edition/desktop/#linux-desktop">Linux</a>.
-            </p>
-        </div>
-    </div>
-    <div class="threecol__single">
-        <div class="threecol__image">
-            <img src="../img/teams-icon.svg" alt="Teams Icon">
-        </div>
-        <div class="threecol__copy">
-            <h4>For Teams</h4>
-            <p>
-                Check out <a href="https://mattermost.com/boards/" target="_blank">Mattermost Boards</a> with integrated collaboration, for <a href="https://customers.mattermost.com/cloud/signup?utm_source=focalboard&amp;utm_campaign=focalboard" target="_blank">cloud</a> or <a href="https://mattermost.com/deploy/?utm_source=focalboard&amp;utm_campaign=focalboard" target="_blank">self-hosted</a>.
             </p>
         </div>
     </div>
