--- a/website/site/content/download/index.html
+++ b/website/site/content/download/index.html
@@ -1,6 +1,7 @@
 ---
-title: "Downloads"
-weight: 1
+title: "Download"
+layout: "page"
+weight: 0
 ---
 
 <div class="homepage__section homepage__threecol">
@@ -22,7 +23,7 @@ weight: 1
         <div class="threecol__copy">
             <h4>For Developers</h4>
             <p>
-                Fork the source code on <a href="https://github.com/mattermost/focalboard" target="_blank">GitHub</a> and install <a href="https://www.focalboard.com/download/personal-edition/ubuntu/">personal server</a> for
+                Fork the source code on <a href="https://github.com/mattermost/focalboard" target="_blank">GitHub</a> and install <a href="/docs/personal-edition/ubuntu/">personal server</a> for
                 development.
             </p>
         </div>
@@ -34,7 +35,7 @@ weight: 1
         <div class="threecol__copy">
             <h4>For Single Users</h4>
             <p>
-                Get <a href="https://www.focalboard.com/download/personal-edition/desktop/">Personal Desktop</a>, a stand-alone single-user app for <a href="https://www.focalboard.com/download/personal-edition/desktop/#macos">Mac</a>, <a href="https://www.focalboard.com/download/personal-edition/desktop/#windows">Windows</a>, and <a href="https://www.focalboard.com/download/personal-edition/desktop/#linux-desktop">Linux</a>.
+                Get <a href="/docs/personal-edition/desktop/">Personal Desktop</a>, a stand-alone single-user app for <a href="/docs/personal-edition/desktop/#macos">Mac</a>, <a href="/docs/personal-edition/desktop/#windows">Windows</a>, and <a href="/docs/personal-edition/desktop/#linux-desktop">Linux</a>.
             </p>
         </div>
     </div>
