--- a/website/site/content/download/index.html
+++ b/website/site/content/download/index.html
@@ -12,7 +12,7 @@ weight: 0
         <div class="threecol__copy">
             <h4>For Teams</h4>
             <p>
-                Get started with Boards for free with <a href="https://customers.mattermost.com/cloud/signup?utm_source=focalboard&utm_campaign=focalboard" target='_blank'>Mattermost Cloud</a> or <a href="https://mattermost.com/deploy/?utm_source=focalboard&utm_campaign=focalboard" target='_blank'>install Mattermost as a self-hosted server</a>.
+                Get started with Boards for free with <a href="https://customers.mattermost.com/cloud/signup?utm_source=focalboard&utm_campaign=focalboard" target='_blank'>Mattermost Cloud</a> or install Mattermost as a <a href="https://mattermost.com/deploy/?utm_source=focalboard&utm_campaign=focalboard" target='_blank'>self-hosted server</a>.
             </p>
         </div>
     </div>
